<resources>
    <string name="app_name">ExpertSystem</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="penyakit">Penyakit</string>
    <string name="gejala">Gejala</string>
    <string name="basis_pengetahuan">Basis Pengetahuan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah_penyakit">Tambah data Penyakit</string>
    <string name="tambah_gejala">Tambah data Gejala</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="penyebab">Penyebab</string>
    <string name="solusi">Solusi</string>
    <string name="ubah">Ubah</string>
    <string name="tambah">Tambah</string>
    <string name="update">Update</string>
    <string name="simpan">Simpan</string>
    <string name="nama_gejala">Nama gejala</string>
    <string name="keyakinan">Tingkat Keyakinan</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>